kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  selector:
    app: calculator
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30080
  type: NodePort
